--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="collapse navbar-collapse header" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav list w3">
         <li><a href="index.html" class="active">Inicio</a></li>
-        <li><a href="#about" class="scroll">Nosotros</a></li>
-        <li><a href="#services" class="scroll"> Servicios</a></li>
-		<li><a href="#portfolio" class="scroll">Portfolio</a></li>
-		<li><a href="#test" class="scroll">Testimonials</a></li>
+        <li><a href="#about" class="scroll">Servicios</a></li>
+        <li><a href="#services" class="scroll">clientes</a></li>
+		<li><a href="#portfolio" class="scroll">Galeria</a></li>
+		<li><a href="#test" class="scroll">Clieentes</a></li>
 		<li><a href="#contact" class="scroll">Contact</a></li>
 	 </ul>
 
