--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="collapse navbar-collapse header" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav list w3">
         <li><a href="index.html" class="active">Inicio</a></li>
-        <li><a href="#about" class="scroll">Servicios</a></li>
-        <li><a href="#services" class="scroll">clientes</a></li>
+        <li><a href="#about" class="scroll">Nosotros</a></li>
+        <li><a href="#services" class="scroll">Servicios</a></li>
 		<li><a href="#portfolio" class="scroll">Galeria</a></li>
-		<li><a href="#test" class="scroll">Clieentes</a></li>
-		<li><a href="#contact" class="scroll">Contact</a></li>
+		<li><a href="#test" class="scroll">Clientes</a></li>
+		<li><a href="#contact" class="scroll">Contactos</a></li>
 	 </ul>
 
 				<div class="w3ls-social-icons">
@@ -180,7 +180,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="modal-content">
 			<div class="modal-header"> 
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="span2" aria-hidden="true">&times;</span></button>						
-				<h4 class="modal-title"> E-services</h4>
+				<h4 class="modal-title">PROAUDIOS</h4>
 			</div> 
 		<div class="modal-body">
 			<div class="agileits-w3layouts-info">
