--- a/index.html
+++ b/index.html
@@ -197,16 +197,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="services" id="services">
 	<div class="container">
 		<div class="w3-head-all ">
-			<h3>Services</h3>
+			<h3>Servicios</h3>
 		</div>	
 
 		<div class="w3-services-grids">
 			<div class="col-md-4 w3-services-grids1">
 			<div class="w3-services-grid1">
 				<i class="fa fa-mobile" aria-hidden="true"></i>
-				<h3>Mobile Services</h3>
+				<h3>Reparación y Mantención</h3>
 				<div class="w3-services-grid1-left">
-					<h4>10 </h4>
+					<h4></h4>
 					<p>ipsum</p>
 				</div>
 				<div class="w3-services-grid1-right">
