--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <img src="images/b11.jpg" alt="home" />
           <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
-			<h3>Need a service?</h3>
-			<p>penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque penatibus et magnis dis parturient montes, nascetur ridiculus mus</p>
+			<h3>PROAUDIOS</h3>
+			<p>SERVICIOS TECNICO PARA </p>
 			</div>
 			<div class="col-md-4 banner_text_right">
 			<h4>right choice to service</h4>
