--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <span class="icon-bar"></span>
       </button>
 	 <a class="navbar-brand logo w3-layouts" href="index.html">
-	  <h1><span class="head w3l"><i class="fa fa-mobile" aria-hidden="true"></i><sup><i class="fa fa-cog" aria-hidden="true"></i></sup></span>E-services</h1>
+	  <h1><span class="head w3l"><i class="fa fa-mobile" aria-hidden="true"></i><sup><i class="fa fa-cog" aria-hidden="true"></i></sup></span>PROAUDIOS</h1>
 	 </a>
 	 </div>
 	 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,9 +52,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <li><a href="index.html" class="active">Inicio</a></li>
         <li><a href="#about" class="scroll">Nosotros</a></li>
         <li><a href="#services" class="scroll"> Servicios</a></li>
-		<li><a href="#portfolio" class="scroll">Portfolio</a></li>
-		<li><a href="#test" class="scroll">Testimonials</a></li>
-		<li><a href="#contact" class="scroll">Contact</a></li>
+		<li><a href="#portfolio" class="scroll">Galeria</a></li>
+		<li><a href="#test" class="scroll">Clientes</a></li>
+		<li><a href="#contact" class="scroll">Contactos</a></li>
 	 </ul>
 
 				<div class="w3ls-social-icons">
@@ -86,8 +86,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <img src="images/b11.jpg" alt="home" />
           <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
-			<h3>Need a service?</h3>
-			<p>penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque penatibus et magnis dis parturient montes, nascetur ridiculus mus</p>
+			<h3>PROAUDIOS</h3>
+			<p>SERVICIOS TECNICO PARA AUDIO PROFESIONAL</p>
 			</div>
 			<div class="col-md-4 banner_text_right">
 			<h4>right choice to service</h4>
@@ -112,8 +112,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <img src="images/22.jpg" alt="home" />
             <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
-			<h3>Want Fast services?</h3>
-			<p>penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque penatibus et magnis dis parturient montes, nascetur ridiculus mus</p>
+			<h3>PROAUDIOS</h3>
+			<p>SERVICIOS TECNICO PARA AUDIO PROFECIONAL</p>
 			</div>
 			<div class="col-md-4 banner_text_right">
 			<h4>right choice to service</h4>
@@ -142,13 +142,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="about" id="about">
 	<div class="container">
 		<div class="w3-head-all text-center ">
-			<h3>About</h3>
+			<h3>Nosotros</h3>
 		</div>	
 		
 		<div class="about-bottom-grid1">
 			<div class="col-md-6 bottomgridtext">
-				<h3>Lorem ipsum dolor sit </h3>
-				<p>Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste natus error sit voluptatem , eaque ipsa quae ab illo inventore </p>
+				<h3>QUIENES SOMOS ?</h3>
+				<p>Somos una empresa dedicada a la industria del audio con una amplia experiencia y  capacitación en mantenimiento, asesoría, reparación y manejo de equipos de audio profesional  para espectáculos, bares, discoteques, centros nocturnos, teatros, centros de convenciones, estudios de grabación, sonorización para eventos religiosos, etc.
+
+                Soporte de equipos de todo tipo y marcas  para sonido en Vivo de pequeños y grandes espectáculos: consolas de sonido, amplificadores (para salas, monitores y de instrumentos), ecualizadores, crossover,
+				</p>
 				<div class="readmore-w3">
 					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Read More<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 				</div>
@@ -164,7 +167,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-6 bottomgridtext bottomleft">
 				<h3>Lorem ipsum dolor sit </h3>
-				<p>Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste natus error sit voluptatem , eaque ipsa quae ab illo inventore </p>
+				<p> procesadores de dinámica y de efectos; tenemos una amplia base de datos con diagramas de circuitos esquemáticos y una basta gama de repuestos  todos importados y originales los cuales recomendamos por durabilidad para nuestro servicio de mantenimiento o reparación.
+					
+                Para nuestros clientes que no residen en la  ciudad de Puerto Montt, tenemos también el servicio de recepción y entrega por Courier de preferencia donde pueden enviar su equipo con destino a oficina de Puerto Montt (CRUZ DEL SUR, TUR-BUS, etc)  previo aviso a través de correo electrónico y nosotros retiramos; posterior a la reparación enviamos por el mismo medio. </p>
 				<div class="readmore-w3">
 					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Read More<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 				</div>
