--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<img src="images/ab22.jpg" alt="">
 			</div>
 			<div class="col-md-6 bottomgridtext bottomleft">
-				<h3>Lorem ipsum dolor sit </h3>
+				<h3><!--TEX--></h3>
 				<p> procesadores de dinámica y de efectos; tenemos una amplia base de datos con diagramas de circuitos esquemáticos y una basta gama de repuestos  todos importados y originales los cuales recomendamos por durabilidad para nuestro servicio de mantenimiento o reparación.
-					
+
                 Para nuestros clientes que no residen en la  ciudad de Puerto Montt, tenemos también el servicio de recepción y entrega por Courier de preferencia donde pueden enviar su equipo con destino a oficina de Puerto Montt (CRUZ DEL SUR, TUR-BUS, etc)  previo aviso a través de correo electrónico y nosotros retiramos; posterior a la reparación enviamos por el mismo medio. </p>
 				<div class="readmore-w3">
 					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Read More<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
