--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 banner_text_right">
 			<h4>right choice to service</h4>
 			<div class="w3-ban-text">
-			<h5>penatibus et magnis lorem</h5>
+			<h5>penatibumagnis lorem</h5>
 			<p>23-05-2017</p>
 			</div>
 			<div class="w3-ban-text">
