--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<p>SERVICIOS TECNICO PARA AUDIO PROFESIONAL</p>
 			</div>
 			<div class="col-md-4 banner_text_right">
-			<h4>right choice to service</h4>
+			<h4></h4>
 			<div class="w3-ban-text">
-			<h5>penatibumagnis lorem</h5>
-			<p>23-05-2017</p>
+			<h5></h5>
+			<p></p>
 			</div>
 			<div class="w3-ban-text">
-			<h5>penatibus et magnis lorem</h5>
-			<p>01-07-2017</p>
+			<h5></h5>
+			<p></p>
 			</div>
 			<div class="w3-ban-text">
-			<h5>penatibus et magnis lorem</h5>
-			<p>15-08-2017</p>
+			<h5></h5>
+			<p></p>
 			</div>
 			</div>
 			<div class="clearfix"></div>
@@ -151,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p>Somos una empresa dedicada a la industria del audio con una amplia experiencia y  capacitación en mantenimiento, asesoría, reparación y manejo de equipos de audio profesional  para espectáculos, bares, discoteques, centros nocturnos, teatros, centros de convenciones, estudios de grabación, sonorización para eventos religiosos, etc.
 				</p>
 				<div class="readmore-w3">
-					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Read More<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">ver Mas<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="col-md-6 bottomgridimg">
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<p>Soporte de equipos de todo tipo y marcas  para sonido en Vivo de pequeños y grandes espectáculos: consolas de sonido, amplificadores (para salas, monitores y de instrumentos), ecualizadores, crossover, procesadores de dinámica y de efectos; tenemos una amplia base de datos con diagramas de circuitos esquemáticos y una basta gama de repuestos  todos importados y originales los cuales recomendamos por durabilidad para nuestro servicio de mantenimiento o reparación.
                  </p>
 				<div class="readmore-w3">
-					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Read More<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Ver Mas<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="clearfix"></div>
@@ -199,14 +199,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="services" id="services">
 	<div class="container">
 		<div class="w3-head-all ">
-			<h3>Services</h3>
+			<h3>SERVICIOS</h3>
 		</div>	
 
 		<div class="w3-services-grids">
 			<div class="col-md-4 w3-services-grids1">
 			<div class="w3-services-grid1">
 				<i class="fa fa-mobile" aria-hidden="true"></i>
-				<h3>Mobile Services</h3>
+				<h3>Reparacion</h3>
 				<div class="w3-services-grid1-left">
 					<h4>10 </h4>
 					<p>ipsum</p>
@@ -221,7 +221,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3-services-grids1 ">
 			<div class=" w3-services-grid2">
 		<i class="fa fa-laptop" aria-hidden="true"></i>
-				<h3>Laptop Services</h3>
+				<h3>Mantencion</h3>
 			<div class="w3-services-grid1-left">
 					<h4>20 </h4>
 					<p>basus</p>
@@ -236,7 +236,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3-services-grids1">
 			<div class=" w3-services-grid3">
 			<i class="fa fa-clipboard" aria-hidden="true"></i>
-				<h3>Tabs Services</h3>
+				<h3>Instalacion</h3>
 			<div class="w3-services-grid1-left">
 					<h4>15 </h4>
 					<p>mpsum</p>
@@ -255,7 +255,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3-services-grids1">
 			<div class="w3-services-grid4">
 							<i class="fa fa-empire" aria-hidden="true"></i>
-				<h3>Apple Services</h3>
+				<h3>Configuracion
+				</h3>
 				<div class="w3-services-grid1-left">
 					<h4>25 </h4>
 					<p>ipsum</p>
@@ -270,7 +271,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3-services-grids1">
 			<div class=" w3-services-grid5">
 							<i class="fa fa-plug" aria-hidden="true"></i>
-				<h3>Board Services</h3>
+				<h3>Diseño</h3>
 				<div class="w3-services-grid1-left">
 					<h4>35</h4>
 					<p>ipsum</p>
@@ -285,7 +286,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3-services-grids1">
 			<div class=" w3-services-grid6">
 							<i class="fa fa-fast-forward" aria-hidden="true"></i>
-				<h3>Ipad Services</h3>
+				<h3>Capacitacion</h3>
 				<div class="w3-services-grid1-left">
 					<h4>40 </h4>
 					<p>ipsum</p>
@@ -379,7 +380,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- gallery -->
 	<div class="gallery" id="portfolio">  
 					<div class="w3-head-all ">
-			<h3>Portfolio</h3>
+			<h3>GALERIA DE REPARACIONES</h3>
 		</div>	
 		<div class="col-sm-6 col-xs-12 gallery-wthreegrids"> 
 			<div class="gallery-agileinfo-row"> 
@@ -387,7 +388,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="images/g1.jpg" class="agilefig gallery-img" data-lightbox="example-set" data-title="Duis venenatis nisl id posuere dictum. Maecenas vitae accumsan est, id imperdiet libero. Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
 				</div>
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid gallery-text">
-					<h4>pc repair</h4> 
+					<h4>p</h4> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit tincidunt ellus feugiat porttitor nulla magna vitae nisl </p>
 				</div>
 				<div class="clearfix"> </div>
@@ -435,7 +436,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- testimonials -->
 	<div class="test" id="test">
 	<div class="w3-head-all ">
-			<h3>Testimonials</h3>
+			<h3>PRINCIPALES CLIENTES</h3>
 		</div>	
 		<div class=" w3_agileits_about_right">
 			<section class="slider">
