--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-sm-6 col-xs-12 gallery-wthreegrids"> 
 			<div class="gallery-agileinfo-row"> 
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid">   
-					<a href="images/g1.jpg" class="agilefig gallery-img" data-lightbox="example-set" data-title="Duis venenatis nisl id posuere dictum. Maecenas vitae accumsan est, id imperdiet libero. Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
+					<a href="images/g1.jpeg" class="agilefig gallery-img" data-lightbox="example-set" data-title="Duis venenatis nisl id posuere dictum. Maecenas vitae accumsan est, id imperdiet libero. Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
 				</div>
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid gallery-text">
 					<h4>p</h4> 
