--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="modal-content">
 			<div class="modal-header"> 
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="span2" aria-hidden="true">&times;</span></button>						
-				<h4 class="modal-title"> E-services</h4>
+				<h4 class="modal-title">Clientes de otro lugar del pais</h4>
 			</div> 
 		<div class="modal-body">
 			<div class="agileits-w3layouts-info">
