cambio de fotos
de envio y modificacion de index

--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<p>SERVICIOS TECNICO PARA AUDIO PROFECIONAL</p>
 			</div>
 			<div class="col-md-4 banner_text_right">
-			<h4>right choice to service</h4>
+			<h4></h4>
 			<div class="w3-ban-text">
-			<h5>penatibus et magnis lorem</h5>
-			<p>23-05-2017</p>
+			<h5></h5>
+			<p></p>
 			</div>
 			<div class="w3-ban-text">
-			<h5>penatibus et magnis lorem</h5>
-			<p>01-07-2017</p>
+			<h5></h5>
+			<p></p>
 			</div>
 			<div class="w3-ban-text">
-			<h5>penatibus et magnis lorem</h5>
-			<p>15-08-2017</p>
+			<h5></h5>
+			<p></p>
 			</div>
 			</div>
 			<div class="clearfix"></div>
@@ -663,7 +663,7 @@ $(function () {
 							</div>
 							<div class="w3-address-right">
 								<h6>Email </h6>
-								<p>Email :<a href="mailto:example@email.com"> mail@example.com</a></p>
+								<p>Email :<a href="mailto:info@proaudios.cl"> info@proaudios.cl</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
