codigo de envio
de correo

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div> 
 		<div class="col-md-6 w3-subscribe-right">
 		<div class="subscribe-w3ls">
-		<form action="#" method="post">
+		<form action="envio.php" method="post">
 			<div class="form-group1 w3layouts w3 w3l w3ls">
 				<input type="email" id="email" name="email" placeholder="Ingresa Nº Orden Servicio"  required>
 			</div>
@@ -549,7 +549,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-6 w3agile_contact_left con-lef-content">
 				<h3>Contactenos</h3>
 				
-				<form action="#" method="post">
+				<form action="envio.php" method="post">
 					<input type="text" name="Nombre" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
 					<input type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
 					<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Mensaje</textarea>
