CAMBIO EN CODIGO
CONTACTO

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="subscribe-w3ls">
 		<form action="envio.php" method="post">
 			<div class="form-group1 w3layouts w3 w3l w3ls">
-				<input type="email" id="email" name="email" placeholder="Ingresa Nº Orden Servicio"  required>
+				<input type="Email" id="Email" name="Email" placeholder="Ingresa Nº Orden Servicio"  required>
 			</div>
 			<div class="form-group2 agileits agileinfo wthree w3-agileits">
 				<button type="submit" class="btn btn-outline btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
@@ -550,9 +550,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>Contactenos</h3>
 				
 				<form action="envio.php" method="post">
-					<input type="text" name="Nombre" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-					<input type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Mensaje</textarea>
+					<input type="text" name="Nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}" required="">
+					<input type="Email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+					<textarea name="Asunto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Asunto...';}" required="">Asunto</textarea>
 					<input type="submit" value="Enviar">
 				</form>
 		</div>
