--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div> 
 		<div class="col-md-6 w3-subscribe-right">
 		<div class="subscribe-w3ls">
-		<form action="envio.php" method="post">
+		<form action="#" method="post">
 			<div class="form-group1 w3layouts w3 w3l w3ls">
-				<input type="Email" id="Email" name="Email" placeholder="Ingresa Nº Orden Servicio"  required>
+				<input type="email" id="email" name="email" placeholder="Ingresa Nº Orden Servicio"  required>
 			</div>
 			<div class="form-group2 agileits agileinfo wthree w3-agileits">
 				<button type="submit" class="btn btn-outline btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
@@ -549,7 +549,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-6 w3agile_contact_left con-lef-content">
 				<h3>Contactenos</h3>
 				
-				<form action="mailto:cristian63439@gmail.com" method="post">
+				<form action="#" method="post">
 					<input type="text" name="Nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}" required="">
 					<input type="Email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
 					<textarea name="Asunto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Asunto...';}" required="">Asunto</textarea>
