--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-6 w3agile_contact_left con-lef-content">
 				<h3>Contactenos</h3>
 				
-				<form action="#" method="post">
+				<form action="envio.php" method="post">
 					<input type="text" name="Nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}" required="">
 					<input type="Email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
 					<textarea name="Asunto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Asunto...';}" required="">Asunto</textarea>
