--- a/index.html
+++ b/index.html
@@ -537,9 +537,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>Contactenos</h3>
 				
 				<form action="envio.php" method="post">
-					<input type="text" name="Nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}" required="">
-					<input type="Email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<textarea name="Asunto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Asunto...';}" required="">Asunto</textarea>
+					<input type="text" name="nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}" required="">
+					<input type="email" name="email" value="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'email';}" required="">
+					<textarea name="mensaje" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mensaje...';}" required="">Mensaje</textarea>
 					<input type="submit" value="Enviar">
 				</form>
 		</div>
