--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<form action="envio.php" method="post">
 					<input type="text" name="nombre" value="nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'nombre';}" required="">
 					<input type="email" name="email" value="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'email';}" required="">
-					<textarea name="mensaje" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mensaje...';}" required="">Mensaje</textarea>
+					<textarea name="mensaje" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mensaje';}" required="">Mensaje</textarea>
 					<input type="submit" value="Enviar">
 				</form>
 		</div>
