--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div class="w3ls-social-icons">
 					<ul class="social-nav model-3d-0 footer-social w3_agile_social two">
-															<li><a href="#" class="facebook">
+															<li><a href="https://www.facebook.com/ProAudios-Servicio-T%C3%A9cnico-Audio-Pro-958865534305075/" class="facebook">
 																  <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
 																  <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
 															<li><a href="#" class="twitter"> 
@@ -82,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Slider  -->
     <div class="callbacks_container w3-layouts">
       <ul class="rslides callbacks callbacks1 agileits" id="slider4">
-        <li id="callbacks1_s1" class="" style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 60ms ease-in-out;">
+        <li id="callbacks1_s1" class="" style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out;">
           <img src="images/b11.jpg" alt="home" />
           <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
         </li>
 		
-        <li id="callbacks1_s2" class="callbacks1_on" style="float: left; position: relative; opacity: 1; z-index: 2; display: list-item; transition: opacity 60ms ease-in-out;">
+        <li id="callbacks1_s2" class="callbacks1_on" style="float: left; position: relative; opacity: 1; z-index: 2; display: list-item; transition: opacity 500ms ease-in-out;">
           <img src="images/22.jpg" alt="home" />
             <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
@@ -296,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div id="team" class="team-content all_pad w3agile team">
 	<div class="container">
 				<div class="w3-head-all ">
-			<h3>Team</h3>
+			<h3>EN PROAUDIOS ESTAMOS COMPROMETIDOS Y ASEGURAMOS</h3>
 		</div>	
 		<div class="t-content-gds">
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
@@ -375,8 +375,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="images/g1.jpeg" class="agilefig gallery-img" data-lightbox="example-set" data-title="Duis venenatis nisl id posuere dictum. Maecenas vitae accumsan est, id imperdiet libero. Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
 				</div>
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid gallery-text">
-					<h4>p</h4> 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit tincidunt ellus feugiat porttitor nulla magna vitae nisl </p>
+					<h4>Consola Diguital.</h4> 
+					<p>Reparacion Consola Diguital midas M32 reparacion y cambio de fader. </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -385,8 +385,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="images/g3.jpg" class="agilefig gallery-img3" data-lightbox="example-set" data-title="Maecenas vitae accumsan est, id imperdiet libero. Duis venenatis nisl id posuere dictum.  Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
 				</div>
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid gallery-text3">
-					<h4>mobile repair</h4>  
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit tincidunt ellus feugiat porttitor nulla magna vitae nisl </p>
+					<h4>Pantalla Midas M32.</h4>  
+					<p>Reparacion jack power y cambio de condensadoes. </p>
 				</div>
 				<div class="clearfix"> </div> 
 			</div> 
@@ -397,8 +397,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="images/g2.jpg" class="agilefig gallery-img2" data-lightbox="example-set" data-title="Duis venenatis nisl id posuere dictum.  Maecenas vitae accumsan est, id imperdiet libero. Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
 				</div> 
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid gallery-text">
-					<h4>Software problems</h4> 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit tincidunt ellus feugiat porttitor nulla magna vitae nisl </p>
+					<h4>Power Behringer Serie EP.</h4> 
+					<p>Reparacion jack power y cambio de condensadoes. </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -407,8 +407,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="images/g4.jpg" class="agilefig gallery-img4" data-lightbox="example-set" data-title="Nisl id posuere dictum duis venenatis. Maecenas vitae accumsan est, id imperdiet libero. Quisque sit amet felis a nisl condimentum bibendum phasellus vitae egestas diam."> </a>
 				</div>
 				<div class="col-sm-6 col-xs-6 gallery-w3lsgrid gallery-text3">
-					<h4>board problems</h4> 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit tincidunt ellus feugiat porttitor nulla magna vitae nisl </p>
+					<h4>Amplificador.</h4> 
+					<p>Reparacion aplificador de Guitarra Roland. </p>
 				</div>
 				<div class="clearfix"> </div> 
 			</div> 
@@ -536,10 +536,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="col-md-6 w3agile_contact_left con-lef-content">
 				<h3>Contactenos</h3>
 				
-				<form action="envio.php" method="post">
-					<input type="text" name="nombre" value="nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'nombre';}" required="">
-					<input type="email" name="email" value="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'email';}" required="">
-					<textarea name="mensaje" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'mensaje';}" required="">Mensaje</textarea>
+				<form action="#" method="post">
+					<input type="text" name="Nombre" value="Nombre" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Nombre';}" required="">
+					<input type="Email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+					<textarea name="Asunto" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Asunto...';}" required="">Asunto</textarea>
 					<input type="submit" value="Enviar">
 				</form>
 		</div>
