--- a/index.html
+++ b/index.html
@@ -298,70 +298,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3-head-all ">
 			<h3>EN PROAUDIOS ESTAMOS COMPROMETIDOS Y ASEGURAMOS</h3>
 		</div>	
-		<div class="t-content-gds">
-			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
-				<div class="team-img">
-					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
-					<div class="team-text">
-						<h4>Thomas</h4>
-						<p>Neque porro</p>
-						<ul>
-							<li><a class="tw1" href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a class="tw2" href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a class="tw3" href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a class="tw4" href="#"><i class="fa fa-linkedin"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
-				<div class="team-img">
-					<img class="img-responsive" src="images/t2.jpg" alt=" "/>
-					<div class="team-text">
-						<h4>Federica</h4>
-						<p>Neque porro</p>
-						<ul>
-							<li><a class="tw1" href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a class="tw2" href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a class="tw3" href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a class="tw4" href="#"><i class="fa fa-linkedin"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
-				<div class="team-img">
-					<img class="img-responsive" src="images/t3.jpg" alt=" "/>
-					<div class="team-text">
-						<h4>Albert</h4>
-						<p>Neque porro</p>
-						<ul>
-							<li><a class="tw1" href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a class="tw2" href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a class="tw3" href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a class="tw4" href="#"><i class="fa fa-linkedin"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
-				<div class="team-img">
-					<img class="img-responsive" src="images/t4.jpg" alt=" "/>
-					<div class="team-text">
-						<h4>Patrick</h4>
-						<p>Neque porro</p>
-						<ul>
-							<li><a class="tw1" href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a class="tw2" href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a class="tw3" href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a class="tw4" href="#"><i class="fa fa-linkedin"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-	</div>
+				<center><iframe width="560" height="315" src="https://www.youtube.com/embed/NslMC0az0GM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+		
 </div>
 <!-- //team -->
 <!-- gallery -->
