--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div id="team" class="team-content all_pad w3agile team">
 	<div class="container">
 				<div class="w3-head-all ">
-			<h3>EN PROAUDIOS ESTAMOS COMPROMETIDOS Y ASEGURAMOS</h3>
+			<h3>MULTIMEDIA REPARACION EQUIPOS</h3>
 		</div>	
 				<center><iframe width="560" height="315" src="https://www.youtube.com/embed/NslMC0az0GM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				   <iframe width="560" height="315" src="https://www.youtube.com/embed/ElZTH3CMi8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
