--- a/index.html
+++ b/index.html
@@ -446,10 +446,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="col-md-6 w3-subscribe-left">
 			<div class="col-md-2 w3-subscribe-left1">
-			<i class="fa fa-envelope-o" aria-hidden="true"></i>
+			<i class="fa fa-whatsapp" aria-hidden="true"></i>
 			</div> 
 			<div class="col-md-10 w3-subscribe-left2">
-				<h3>Conozca el estado de tu equipo ingresa numero de orden de servicio.</h3>
+				<h3><a title="Click para chatear" href="https://api.whatsapp.com/api/send?phone=56996448764" target="_blank" rel="noopener">Envíanos un mensaje por WhatsApp</a></h3>
 			</div>
 			<div class="clearfix"></div>
 		</div> 
@@ -457,7 +457,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="subscribe-w3ls">
 		<form action="#" method="post">
 			<div class="form-group1 w3layouts w3 w3l w3ls">
-				<input type="email" id="email" name="email" placeholder="Ingresa Nº Orden Servicio"  required>
+				Email :<a href="mailto:info@proaudios.cl"> info@proaudios.cl</a></p>
 			</div>
 			<div class="form-group2 agileits agileinfo wthree w3-agileits">
 				<button type="submit" class="btn btn-outline btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
@@ -474,7 +474,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- contact -->
 	
 	
-		<iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d2990.100640677262!2d-72.90304738457202!3d-41.45873247925765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-41.458310999999995!2d-72.900896!5e0!3m2!1ses-419!2scl!4v1546202760296" width="1500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d2990.100640677262!2d-72.90304738457202!3d-41.45873247925765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-41.458310999999995!2d-72.900896!5e0!3m2!1ses-419!2scl!4v1546202760296" width="1500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 	<!-- //map -->
 
